# dagger

./: .gitignore  ARCHITECTURE.md  COSTING_INTEGRATION_PLAN.md  DIM_INTEGRATION_PLAN.md  FLOW_NETWORK_SPEC.md  PLAN.md  QUERY_SYNTAX.md  README.md  TAURI_DISTRIBUTION_PLAN.md  VALIDATION_COMMANDS.md  ZOD_VALIDATION_REFACTOR_PLAN.md  eslint.config.mjs  justfile  package.json
.claude/: settings.local.json
backend/: .gitignore  API_TESTING.md  Dockerfile  HTTPIE_API_TESTING.md  README.md  README_TESTING.md  VALUE_FORMATTING.md  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
backend/pkg/: dagger.d.ts  dagger.js  dagger_bg.wasm  dagger_bg.wasm.d.ts
backend/reference/: generated-request.json  (+1 more)
cli/: .gitignore  Cargo.toml  build.rs
cli/src/: lib.rs  main.rs  wasm.rs
cli/src/dim/: RUST_INTEGRATION.md  detector.rs  dim.h  error.rs  ffi.rs  formatter.rs  mod.rs  parser.rs  processor.rs  types.rs  validator.rs  wasm_stub.rs
cli/src/parser/: loader.rs  mod.rs  models.rs  network.rs  tests.rs  validation.rs
cli/src/query/: executor.rs  formatter.rs  mod.rs  parser.rs  tests.rs
cli/src/schema/: loader.rs  mod.rs  registry.rs  validator.rs
cli/src/scope/: config.rs  mod.rs  registry.rs  resolver.rs
docs/: QUALITY_SCORE.md  core-beliefs.md  enforcement.md  index.md
frontend/: Dockerfile  README.md  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
local/: docker-compose.yml
schemas/: .gitignore  README.md  generate-schemas.ts  package-lock.json  package.json
scripts/: check-docs-freshness.sh  check-test-counts.sh
(+152 files in other folders)
