[package]
name = "dagger"
version = "0.1.0"
edition = "2021"

[lib]
name = "dagger"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
toml = "0.9.10"
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
