[package]
name = "dagger"
version = "0.1.0"
edition = "2021"

[lib]
name = "dagger"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
bindgen = "0.69"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
toml = "0.9.10"
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
regex = "1.10"
lazy_static = "1.5"

# Native FFI for dim library (only for native builds, not WASM)
# For WASM builds, we use stubs (see dim/wasm_stub.rs)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libc = "0.2"

[profile.release]
opt-level = "z" # Optimize for size
lto = true      # Enable link-time optimization
